# KARICAT_Eye

./: Android.mk  Application.mk  CMakeLists.txt
include/: MsgDef.h
src/: Android.mk  CameraSensor.cpp  CameraSensor.cpp~  CameraSensor.h  CameraSensor.h~  DetectingMode.cpp  DetectingMode.cpp~  DetectingMode.h  Interface.h  KARIKAT_Eye.cpp~  MPEGCoder.cpp  MPEGCoder.cpp~  MPEGCoder.h  MPEGCoder.h~  MatrixAlgebra.h  Mode.cpp  Mode.h  ModeManager.cpp~  ModeManager.h  RANSAC_Tracker.cpp~  RANSAC_Tracker.h  RANSAC_Tracker.h~  RANSAC_plane.bak  RANSAC_plane.cpp~  RANSAC_plane.h  ReadyMode.cpp  ReadyMode.h  TrackingMode.cpp~  TrackingMode.h  TrackingMode.h~  UDPTranceiver.cpp  UDPTranceiver.h  VideoModule.cpp  VideoModule.h  XtionProCamera.cpp  XtionProCamera.h  main.bak  main.cpp~  tracker.cpp  tracker.cpp~  (+3 more)
